<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_fragment_main"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent="0.7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:textColorHint="@color/defColorTextView"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/password"
            android:textColorHint="@color/defColorTextView"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/black"
        android:fontFamily="@font/comic_cat"
        android:text="@string/registrationLog"
        android:textColor="@color/black"
        android:paddingHorizontal="10dp"
        android:background="@drawable/registartion_textvie_background"
        app:layout_constraintTop_toBottomOf="@id/btnLogIn"
        app:layout_constraintEnd_toEndOf="@id/btnLogIn"
        app:layout_constraintStart_toStartOf="@id/btnLogIn"

        />

    <Button

        android:id="@+id/btnLogIn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btnContinue"
        android:textColor="@color/black"
        android:fontFamily="@font/comic_cat"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:backgroundTint="@color/backYellow"
        android:shadowColor="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"/>
</androidx.constraintlayout.widget.ConstraintLayout>